--- a/index.html
+++ b/index.html
@@ -1,276 +1,204 @@
 <!DOCTYPE html>
 <html lang="es">
 <head>
-<meta charset="utf-8" />
-<meta name="viewport" content="width=device-width, initial-scale=1" />
-<title>Uber Pro GPS - OCR estable</title>
+<meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1.0, viewport-fit=cover">
+<title>Uber Pro GPS</title>
 
-<!-- Tesseract OCR -->
+<script src="https://cdn.tailwindcss.com"></script>
 <script src="https://cdn.jsdelivr.net/npm/tesseract.js@5/dist/tesseract.min.js"></script>
 
 <style>
-/* Mantengo el estilo que tenías: no lo cambié visualmente */
-:root { --neon-blue:#00d2ff; --deep-blue:#0072ff; }
-body {
-  background:#050505; color:#fff; font-family:Inter, -apple-system, Arial, sans-serif;
-  margin:0; display:flex; align-items:center; justify-content:center; min-height:100vh; padding:18px;
+@import url('https://fonts.googleapis.com/css2?family=Orbitron:wght@400;900&family=Inter:wght@300;400;700;900&display=swap');
+
+:root {
+  --neon-blue:#00d2ff;
+  --deep-blue:#0072ff;
 }
-.container { width:100%; max-width:420px; }
-.card {
-  background: #0a0a0a; border-radius:20px; padding:20px; box-shadow:0 18px 40px rgba(0,0,0,.6);
+
+body{
+  background:#050505;
+  color:#fff;
+  font-family:'Inter',sans-serif;
+  margin:0;
+  height:100vh;
+  display:flex;
+  align-items:center;
+  justify-content:center;
 }
-.brand { font-family:Orbitron, sans-serif; font-weight:900; font-size:28px; color:var(--neon-blue); margin:0 0 8px 0; }
-.small { color:#9fbde0; font-size:12px; margin-bottom:8px; }
-input[type=file]{width:100%}
-.preview { width:100%; border-radius:12px; margin-top:12px; display:none; }
-.btn { width:100%; padding:14px; border-radius:12px; border:none; font-weight:800; cursor:pointer; margin-top:12px; }
-.btn-primary { background:linear-gradient(135deg,#fff,#e6e6e6); color:#000; }
-.btn-secondary { background:#00a3ff; color:#000; }
-#log { margin-top:12px; color:#bcd; white-space:pre-line; font-size:13px; min-height:36px; }
-.loader { display:inline-block; width:36px; height:36px; border-radius:50%; border:4px solid rgba(0,210,255,.15); border-top-color:var(--neon-blue); animation:spin 1s linear infinite; vertical-align:middle; margin-left:8px; }
-@keyframes spin {100%{transform:rotate(360deg)}}
+
+.neon-container{
+  width:100%;
+  max-width:420px;
+  height:92vh;
+  background:#0a0a0a;
+  border-radius:40px;
+  padding:3px;
+  box-shadow:0 0 40px rgba(0,114,255,.3);
+}
+
+.glass-panel{
+  background:rgba(10,10,10,.96);
+  width:100%;
+  height:100%;
+  border-radius:37px;
+  padding:24px;
+  display:flex;
+  flex-direction:column;
+}
+
+.brand-title{
+  font-family:'Orbitron';
+  font-size:2.2rem;
+  letter-spacing:4px;
+  color:#000;
+  -webkit-text-stroke:1.5px var(--neon-blue);
+  text-align:center;
+}
+
+.ios-card{
+  background:rgba(255,255,255,.04);
+  border-radius:22px;
+  border:1px solid rgba(255,255,255,.08);
+  padding:16px;
+}
+
+.btn{
+  width:100%;
+  padding:18px;
+  border-radius:18px;
+  font-weight:900;
+  letter-spacing:.2em;
+  text-transform:uppercase;
+}
+
+.btn-main{
+  background:#fff;
+  color:#000;
+  margin-top:14px;
+}
+
+.btn-nav{
+  background:linear-gradient(135deg,var(--neon-blue),var(--deep-blue));
+  color:#000;
+  margin-top:10px;
+}
+
+#preview{
+  max-width:100%;
+  border-radius:18px;
+  margin-top:12px;
+}
+
+#log{
+  margin-top:14px;
+  font-size:11px;
+  color:#7dd3fc;
+  white-space:pre-line;
+}
 </style>
 </head>
+
 <body>
-<div class="container">
-  <div class="card">
-    <h1 class="brand">UBER PRO</h1>
-    <div class="small">Deep Scan GPS — Extrae coordenadas y abre Sygic/Google</div>
 
-    <input id="fileInput" type="file" accept="image/*">
-    <img id="preview" class="preview" alt="preview imagen">
+<div class="neon-container">
+  <div class="glass-panel">
 
-    <button id="btnAnalyze" class="btn btn-primary">Analizar trayecto ✨</button>
-    <button id="btnNavigate" class="btn btn-secondary">Navegar PRO</button>
+    <h1 class="brand-title mb-4">UBER PRO</h1>
 
-    <div id="log">Estado: esperando imagen...</div>
+    <div class="ios-card">
+      <input id="fileInput" type="file" accept="image/*" class="w-full text-xs">
+      <img id="preview">
+    </div>
+
+    <button class="btn btn-main" onclick="analyzeImage()">ANALIZAR TRAYECTO</button>
+    <button class="btn btn-nav" onclick="navigatePro()">NAVEGAR PRO</button>
+
+    <div id="log"></div>
+
   </div>
 </div>
 
 <script>
-/* ------------ Helpers / DOM ------------ */
-const fileInput = document.getElementById('fileInput');
-const preview = document.getElementById('preview');
-const btnAnalyze = document.getElementById('btnAnalyze');
-const btnNavigate = document.getElementById('btnNavigate');
-const logBox = document.getElementById('log');
-
 let currentCoords = null;
 
-function log(msg){
-  console.log('[UberPro]', msg);
-  logBox.textContent = 'Estado: ' + msg;
-}
+const fileInput = document.getElementById('fileInput');
+const preview   = document.getElementById('preview');
+const logBox    = document.getElementById('log');
 
-/* Resize image to reduce OCR time if big */
-function resizeImageIfNeeded(file, maxWidth = 1200){
-  return new Promise((resolve, reject) => {
-    const img = new Image();
-    const reader = new FileReader();
-    reader.onload = e => { img.src = e.target.result; };
-    reader.onerror = reject;
-    img.onerror = reject;
-    img.onload = () => {
-      // if width already small, keep original dataURL
-      if(img.width <= maxWidth){
-        resolve(img.src);
-        return;
-      }
-      // scale down preserving aspect
-      const scale = maxWidth / img.width;
-      const canvas = document.createElement('canvas');
-      canvas.width = Math.round(img.width * scale);
-      canvas.height = Math.round(img.height * scale);
-      const ctx = canvas.getContext('2d');
-      ctx.drawImage(img, 0, 0, canvas.width, canvas.height);
-      canvas.toBlob(blob => {
-        if(!blob) {
-          // fallback to original src
-          resolve(img.src);
-        } else {
-          // create object URL from blob
-          const url = URL.createObjectURL(blob);
-          resolve(url);
-        }
-      }, 'image/jpeg', 0.85);
-    };
-    reader.readAsDataURL(file);
-  });
-}
-
-/* Extract decimal lat,long from text: robust loop to find first valid pair */
-function extractCoordsFromText(text){
-  if(!text || typeof text !== 'string') return null;
-  // match decimals with comma separator
-  const re = /(-?\d{1,2}\.\d+)\s*,\s*(-?\d{1,3}\.\d+)/g;
-  let m;
-  while((m = re.exec(text)) !== null){
-    const la = Number(m[1]), lo = Number(m[2]);
-    if(!Number.isNaN(la) && !Number.isNaN(lo) && la>=-90 && la<=90 && lo>=-180 && lo<=180){
-      return { lat: la.toFixed(6), lon: lo.toFixed(6) };
-    }
-  }
-  return null;
-}
-
-/* ------------ OCR flow (robust) ------------ */
-async function analyzeImage(){
-  const file = fileInput.files[0];
-  if(!file){ log('Selecciona una imagen primero'); return; }
-
-  log('Iniciando OCR (puede tardar)...');
-  btnAnalyze.disabled = true;
-  btnNavigate.disabled = true;
-  currentCoords = null;
-
-  let worker = null;
-  let usedImageSrc = null;
-  try{
-    // Resize (if large) to speed OCR and avoid blocking
-    usedImageSrc = await resizeImageIfNeeded(file, 1200);
-    log('Imagen preparada para OCR (optimizada).');
-
-    // Create and initialize worker properly
-    if(typeof Tesseract === 'undefined' || !Tesseract.createWorker){
-      throw new Error('Motor OCR no disponible en este navegador.');
-    }
-
-    worker = Tesseract.createWorker({
-      logger: m => {
-        // optional: progress logs
-        // console.log('tess', m);
-      }
-    });
-
-    await worker.load();
-    // using 'eng' is fine for digits; if your images need spanish words, change to 'spa'
-    await worker.loadLanguage('eng');
-    await worker.initialize('eng');
-    // restrict char set to speed recognition: digits, comma, dot, hyphen, spaces
-    await worker.setParameters({ tessedit_char_whitelist: '0123456789.,- ' });
-
-    // Recognize with timeout
-    const recognizePromise = worker.recognize(usedImageSrc);
-    const res = await Promise.race([
-      recognizePromise,
-      new Promise((_, reject) => setTimeout(()=> reject(new Error('OCR timeout')), 25000))
-    ]);
-
-    // extract text and search coords
-    const text = (res && res.data && res.data.text) ? res.data.text : (res && res.text) ? res.text : '';
-    console.log('[OCR TEXT]', text);
-
-    const coords = extractCoordsFromText(text);
-    if(!coords){
-      log('OCR finalizado: no se encontraron coordenadas visibles.');
-      return;
-    }
-
-    currentCoords = `${coords.lat},${coords.lon}`;
-    try{
-      await navigator.clipboard.writeText(currentCoords);
-      log('Coordenadas detectadas y copiadas: ' + currentCoords);
-    }catch(e){
-      log('Coordenadas detectadas: ' + currentCoords + ' (no se pudo copiar automáticamente)');
-    }
-
-  }catch(err){
-    console.error('analyze error', err);
-    if(err && err.message && err.message.includes('OCR timeout')){
-      log('OCR tardó demasiado. Intenta una imagen más pequeña o recortar la zona con coordenadas.');
-    } else {
-      log('Error al procesar la imagen. Revisa la consola.');
-    }
-  }finally{
-    // ensure worker termination and free resources
-    try{ if(worker) await worker.terminate(); }catch(e){/*ignore*/}
-
-    // revoke object URL if we created one via resizeImageIfNeeded
-    try{ if(usedImageSrc && usedImageSrc.startsWith('blob:')) URL.revokeObjectURL(usedImageSrc); }catch(e){}
-
-    btnAnalyze.disabled = false;
-    btnNavigate.disabled = false;
-  }
-}
-
-/* ------------ Navigate PRO (web + capacitor fallback) ------------ */
-function navigatePro(){
-  if(!currentCoords){
-    log('Primero analiza la imagen para obtener coordenadas');
-    return;
-  }
-  const sygicSchemes = [
-    `sygic://coordinate|${currentCoords}`,
-    `com.sygic.aura://coordinate|${currentCoords}`
-  ];
-  const googleUrl = `https://www.google.com/maps/search/?api=1&query=${currentCoords}`;
-
-  log('Intentando abrir Sygic / Google (según entorno)...');
-
-  // Capacitor native path
-  try{
-    if(window.Capacitor && Capacitor.Plugins && Capacitor.Plugins.App && typeof Capacitor.Plugins.App.openUrl === 'function'){
-      // try both schemes
-      Capacitor.Plugins.App.openUrl({ url: sygicSchemes[0] })
-      .then(()=> log('Intento Sygic (scheme 1) enviado a sistema.'))
-      .catch(()=> {
-        Capacitor.Plugins.App.openUrl({ url: sygicSchemes[1] })
-        .then(()=> log('Intento Sygic (scheme 2) enviado a sistema.'))
-        .catch(()=> {
-          Capacitor.Plugins.App.openUrl({ url: googleUrl });
-          log('Fallback: Google Maps (Capacitor).');
-        });
-      });
-      return;
-    }
-  }catch(e){
-    console.warn('Capacitor path error', e);
-  }
-
-  // Web fallback: try <a> click, then iframe, then Google
-  (function webOpen(){
-    // 1) Try anchor click
-    try{
-      const a = document.createElement('a');
-      a.href = sygicSchemes[0];
-      a.style.display = 'none';
-      document.body.appendChild(a);
-      a.click();
-      document.body.removeChild(a);
-      // allow some time for the app to open; if not, open google
-      setTimeout(()=>{ log('Si Sygic no respondió, se abre Google Maps...'); window.location.href = googleUrl; }, 1200);
-      return;
-    }catch(e){ console.warn('anchor failed', e); }
-
-    // 2) iframe fallback
-    try{
-      const iframe = document.createElement('iframe');
-      iframe.style.display = 'none';
-      iframe.src = sygicSchemes[0];
-      document.body.appendChild(iframe);
-      setTimeout(()=>{ try{ document.body.removeChild(iframe); }catch(_){}; window.location.href = googleUrl; }, 1200);
-      return;
-    }catch(e){
-      console.warn('iframe failed', e);
-    }
-
-    // 3) final fallback
-    window.location.href = googleUrl;
-  })();
-}
-
-/* ------------ UI wiring ------------ */
-fileInput.addEventListener('change', e => {
-  // show preview on load
+fileInput.onchange = e=>{
   const f = e.target.files[0];
   if(!f) return;
   preview.src = URL.createObjectURL(f);
-  preview.style.display = 'block';
-  log('Imagen cargada, lista para analizar.');
-});
+  log('Imagen cargada correctamente');
+};
 
-btnAnalyze.addEventListener('click', analyzeImage);
-btnNavigate.addEventListener('click', navigatePro);
+function log(t){
+  logBox.innerText += t + "\n";
+}
+
+async function analyzeImage(){
+  if(!fileInput.files[0]){
+    log('❌ Selecciona una imagen primero');
+    return;
+  }
+
+  log('⏳ Iniciando OCR (iPhone estable)…');
+
+  try{
+    const worker = await Tesseract.createWorker({
+      logger:m=>log(`OCR: ${m.status}`)
+    });
+
+    await worker.loadLanguage('eng');
+    await worker.initialize('eng');
+
+    const { data:{ text } } = await worker.recognize(fileInput.files[0]);
+    await worker.terminate();
+
+    log('OCR completado');
+
+    const match = text.match(/(-?\d{1,2}\.\d+)\s*,\s*(-?\d{1,3}\.\d+)/);
+
+    if(!match){
+      log('❌ No se encontraron coordenadas en la imagen');
+      return;
+    }
+
+    currentCoords = `${match[1]},${match[2]}`;
+
+    await navigator.clipboard.writeText(currentCoords);
+    log(`✅ Coordenadas copiadas:\n${currentCoords}`);
+
+  }catch(err){
+    console.error(err);
+    log('❌ Error OCR. Ver consola remota');
+  }
+}
+
+function navigatePro(){
+  if(!currentCoords){
+    log('❌ Primero analiza la imagen');
+    return;
+  }
+
+  log('🚗 Abriendo navegación…');
+
+  const sygic = `com.sygic.aura://coordinate|${currentCoords}`;
+  const google = `https://maps.google.com/?q=${currentCoords}`;
+
+  // Intento Sygic
+  const iframe = document.createElement('iframe');
+  iframe.style.display='none';
+  iframe.src=sygic;
+  document.body.appendChild(iframe);
+
+  // Fallback Google Maps
+  setTimeout(()=>{
+    window.location.href = google;
+  },1200);
+}
 </script>
+
 </body>
 </html>
