--- a/index.html
+++ b/index.html
@@ -1,62 +1,181 @@
 <!DOCTYPE html>
 <html lang="es">
 <head>
-  <meta charset="UTF-8" />
-  <title>Uber Pro GPS</title>
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, viewport-fit=cover">
+    <title>Uber Pro GPS Edition</title>
+    <script src="https://cdn.tailwindcss.com"></script>
 
-  <!-- Tesseract OCR -->
-  <script src="https://cdn.jsdelivr.net/npm/tesseract.js@5/dist/tesseract.min.js"></script>
+    <style>
+        @import url('https://fonts.googleapis.com/css2?family=Orbitron:wght@400;900&family=Inter:wght@300;400;700;900&display=swap');
 
-  <style>
-    body {
-      font-family: -apple-system, BlinkMacSystemFont, sans-serif;
-      background: #0f172a;
-      color: #fff;
-      padding: 16px;
-    }
-    button {
-      width: 100%;
-      padding: 14px;
-      margin-top: 10px;
-      font-size: 16px;
-      border-radius: 10px;
-      border: none;
-      background: #22c55e;
-      color: #000;
-      font-weight: bold;
-    }
-    input {
-      width: 100%;
-      margin-top: 10px;
-    }
-    #status {
-      margin-top: 12px;
-      font-size: 14px;
-      color: #38bdf8;
-    }
-    pre {
-      white-space: pre-wrap;
-      font-size: 13px;
-    }
-  </style>
+        :root {
+            --neon-blue: #00d2ff;
+            --deep-blue: #0072ff;
+        }
+
+        body {
+            background-color: #050505;
+            color: #fff;
+            font-family: 'Inter', sans-serif;
+            margin: 0;
+            height: 100vh;
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            overflow: hidden;
+        }
+
+        .brand-title {
+            font-family: 'Orbitron', sans-serif;
+            font-weight: 900;
+            font-size: 2.5rem;
+            letter-spacing: 4px;
+            color: #000;
+            -webkit-text-stroke: 1.5px var(--neon-blue);
+            text-shadow: 0 0 10px rgba(0,210,255,.7),
+                         0 0 20px rgba(0,210,255,.3);
+        }
+
+        .neon-container {
+            position: relative;
+            max-width: 400px;
+            width: 100%;
+            height: 90vh;
+            background: #0a0a0a;
+            border-radius: 40px;
+            padding: 3px;
+            overflow: hidden;
+            box-shadow: 0 0 40px rgba(0,114,255,.3);
+        }
+
+        .neon-container::before {
+            content: "";
+            position: absolute;
+            inset: -50%;
+            background: conic-gradient(
+                transparent,
+                var(--neon-blue),
+                var(--deep-blue),
+                transparent 40%
+            );
+            animation: rotate 6s linear infinite;
+        }
+
+        @keyframes rotate {
+            to { transform: rotate(360deg); }
+        }
+
+        .glass-panel {
+            position: relative;
+            z-index: 1;
+            background: rgba(10,10,10,.95);
+            border-radius: 37px;
+            width: 100%;
+            height: 100%;
+            padding: 24px;
+            display: flex;
+            flex-direction: column;
+        }
+
+        .ios-card {
+            background: rgba(255,255,255,.03);
+            backdrop-filter: blur(10px);
+            border-radius: 24px;
+            border: 1px solid rgba(255,255,255,.08);
+            padding: 20px;
+        }
+
+        #dropzone {
+            flex: 1;
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+            justify-content: center;
+            cursor: pointer;
+            margin-bottom: 20px;
+        }
+
+        .btn-analyze {
+            background: linear-gradient(135deg,#fff,#e0e0e0);
+            color: #000;
+            font-weight: 900;
+            border-radius: 18px;
+            width: 100%;
+            padding: 20px;
+            opacity: .2;
+            pointer-events: none;
+            transition: .3s;
+        }
+
+        .btn-analyze.active {
+            opacity: 1;
+            pointer-events: auto;
+        }
+
+        .preview-img {
+            max-width: 100%;
+            max-height: 100%;
+            border-radius: 20px;
+            display: none;
+        }
+    </style>
 </head>
+
 <body>
 
-<h2>📍 Uber Pro GPS</h2>
+<div class="neon-container">
+    <div class="glass-panel">
 
-<input type="file" id="imageInput" accept="image/*" />
+        <div class="text-center mb-6">
+            <h1 class="brand-title">UBER PRO</h1>
+            <p class="text-[10px] opacity-60 tracking-widest">Deep Scan GPS</p>
+        </div>
 
-<button onclick="analyzeImage()">Analizar imagen</button>
-<button onclick="navigatePro()">Navegar PRO (Sygic)</button>
+        <div id="ui-main" class="flex flex-col flex-1">
+            <div id="dropzone" class="ios-card">
+                <input id="file-input" type="file" accept="image/*" hidden>
+                <p id="upload-text" class="text-xs opacity-40 uppercase tracking-widest">
+                    Cargar Captura
+                </p>
+                <img id="image-preview" class="preview-img">
+            </div>
 
-<div id="status"></div>
-<pre id="output"></pre>
+            <button id="analyze-trigger" class="btn-analyze">
+                Analizar Trayecto ✨
+            </button>
+        </div>
 
-<script src="js/ocr.js"></script>
-<script src="js/geocode.js"></script>
-<script src="js/navigation.js"></script>
-<script src="js/history.js"></script>
+    </div>
+</div>
+
+<script>
+const fileInput = document.getElementById("file-input");
+const dropzone = document.getElementById("dropzone");
+const imgPreview = document.getElementById("image-preview");
+const uploadText = document.getElementById("upload-text");
+const analyzeBtn = document.getElementById("analyze-trigger");
+
+// ✅ FIX REAL — click correcto
+dropzone.addEventListener("click", () => {
+    fileInput.click();
+});
+
+fileInput.addEventListener("change", e => {
+    const file = e.target.files[0];
+    if (!file) return;
+
+    const reader = new FileReader();
+    reader.onload = ev => {
+        imgPreview.src = ev.target.result;
+        imgPreview.style.display = "block";
+        uploadText.style.display = "none";
+        analyzeBtn.classList.add("active");
+    };
+    reader.readAsDataURL(file);
+});
+</script>
 
 </body>
 </html>
+
